--- a/index.html
+++ b/index.html
@@ -4,35 +4,63 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Geliştirilmiş Fitness Hesaplayıcı</title>
+
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-<div class="container">
-  <h2>Geliştirilmiş Fitness Hesaplayıcı</h2>
-  <div id="initialDisclaimer" class="general-disclaimer">
-    <strong>Önemli Tıbbi Feragatname:</strong> Bu hesaplayıcıdaki tüm bilgiler genel rehber niteliğindedir ve tıbbi tavsiye yerine geçmez. Sağlık durumunuz, diyetiniz veya supplement kullanımınız hakkında herhangi bir karar vermeden önce daima nitelikli bir sağlık profesyoneline (doktor, diyetisyen vb.) danışmanız ŞARTTIR.
-  </div>
-  
-  <select id="hesapSec">
-    <option value="">-- Hesaplama Türü Seçiniz --</option>
-    <option value="hepsi">Toplu Supplement Hesaplama</option>
-    <option value="protein">Günlük Protein İhtiyacı</option>
-    <option value="yag">Yağ Oranı & VKİ</option>
-    <option value="kreatin">Kreatin Monohidrat Dozu</option>
-    <option value="beta">Beta-Alanin Dozu</option>
-    <option value="sitrulin">Sitrülin Malat Dozu</option>
-    <option value="karnitin">L-Karnitin Dozu</option>
-    <option value="kafein">Kafein Dozu</option>
-    <option value="kreatinin">Kreatinin Tahmini</option>
-  </select>
+<body class="anapage">
 
-  <div id="contentSections"></div> 
+  <div class="container">
+    <div id="initialDisclaimer" class="general-disclaimer">
+      <strong>Önemli Tıbbi Feragatname:</strong> Bu hesaplayıcıdaki tüm bilgiler genel rehber niteliğindedir ve tıbbi tavsiye yerine geçmez. Sağlık durumunuz, diyetiniz veya supplement kullanımınız hakkında herhangi bir karar vermeden önce daima nitelikli bir sağlık profesyoneline (doktor, diyetisyen vb.) danışmanız ŞARTTIR.
+    </div>
+    <h2>Geliştirilmiş Fitness Hesaplayıcı</h2>
+    
+    <div id="dropdownMenu" class="dropdown-container">
+      <h3 id="dropdownButton" class="dropdown-button">
+        Hesaplama Türü Seçiniz
+        <span class="dropdown-icon">&#9660;</span>
+      </h3>
+      <div id="dropdownContent" class="dropdown-content">
+        <ul id="hesapListesi">
+          <li data-value="home">Ana Sayfa</li>
+          <li data-value="hepsi">Toplu Supplement Hesaplama</li>
+          <li data-value="protein">Günlük Protein İhtiyacı</li>
+          <li data-value="kreatin">Kreatin</li>
+          <li data-value="kafein">Kafein</li>
+          <li data-value="sitrulin">Sitrülin Malat</li>
+          <li data-value="beta">Beta Alanin</li>
+          <li data-value="karnitin">L-Karnitin</li>
+          <li data-value="yag">Yağ Oranı & VKİ</li>
+          <li data-value="kreatinin">Kreatinin Tahmini</li>
+        </ul>
+      </div>
+    </div>
 
-</div>
-<div class="page-footer-spacer"></div>
+    <main class="main-scroll-content"> 
+        <div id="contentSections"></div> 
+    </main>
+    
+    <footer>
+      <div class="footer-link">
+          <a href="kaynakca.html" target="_blank">Kaynakça</a>
+      </div>
+      <p>&copy; 2025 Fitness Hesaplayıcı. Tüm Hakları Saklıdır.</p>
+    </footer>
+  </div> 
 
-<script src="js/main.js"></script>
-<script src="js/calculations.js"></script>
+  <div class="page-bottom-spacer"></div>
+
+  <script src="js/common.js"></script>
+  <script src="js/betaHesaplayici.js"></script>
+  <script src="js/kafeinHesaplayici.js"></script>
+  <script src="js/karnitinHesaplayici.js"></script>
+  <script src="js/kreatinHesaplayici.js"></script>
+  <script src="js/kreatininTahminiHesaplayici.js"></script>
+  <script src="js/proteinHesaplayici.js"></script>
+  <script src="js/sitrulinHesaplayici.js"></script>
+  <script src="js/topluSupplementHesaplayici.js"></script>
+  <script src="js/yagOraniHesaplayici.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 </html>
