--- a/kaynakca.html
+++ b/kaynakca.html
@@ -127,7 +127,7 @@
           <a href="https://pubmed.ncbi.nlm.nih.gov/21262048/" class="kaynak-link" target="_blank">Makaleyi Görüntüle</a>
         </div>
         <div class="kaynak-item">
-          <strong>Helms 2014:</strong> Definasyon (yağ yakımı) döneminde kalori açığı oluştuğunda kas kütlesinin korunması zorlaşır. Bu makale, bu dönemde kas kaybını en aza indirmek için <span class="vurgu">2.3-3.1 g/kg "yağsız vücut kütlesi"</span> başına protein alımını önermektedir.
+          <strong>Helms 2014:</strong> Definasyon (yağ yakımı) döneminde kalori açığı oluştuğunda kas kütlesinin korunması zorlaşır. Bu makale, bu dönemde kas kaybını en aza indirmek için <span class="vurgu">2.3-3.1 g/kg yağsız vücut kütlesi</span> başına protein alımını önermektedir.
           <a href="https://pubmed.ncbi.nlm.nih.gov/24092765/" class="kaynak-link" target="_blank">Makaleyi Görüntüle</a>
         </div>
         <div class="kaynak-item">
@@ -156,6 +156,10 @@
           <a href="https://pubmed.ncbi.nlm.nih.gov/28615996/" class="kaynak-link" target="_blank">Makaleyi Görüntüle</a>
         </div>
         <div class="kaynak-item">
+          <strong>Lopes E. et al. 2022 Meta-Analiz:</strong> 1.900'den fazla katılımcının verisini inceleyen bu meta-analiz, kreatin takviyesinin dehidrasyona, kramplara veya böbrek fonksiyonlarında bozulmaya yol açtığına dair bir kanıt <span class="vurgu"> bulamamış </span> aksine, kreatinin vücut su dengesini<span class="vurgu"> olumsuz etkilemediği</span> doğrulanmıştır.
+          <a href="https://pubmed.ncbi.nlm.nih.gov/36423984/" class="kaynak-link" target="_blank">Makaleyi Görüntüle</a>
+        </div>
+        <div class="kaynak-item">
           <strong>Kreider 2003 (5 Yıllık Çalışma):</strong> Kreatinin böbreklere zarar verip vermediği konusundaki endişeleri ele alan bu uzun süreli çalışma, kontrollü dozlarda düzenli kreatin kullanımının sağlıklı bireylerde <span class="vurgu">böbrek fonksiyonları üzerinde olumsuz bir etki yaratmadığını</span> göstermiştir.
           <a href="https://doi.org/10.1519/1533-4287(2003)017<0106:LSEOCM>2.0.CO;2" class="kaynak-link" target="_blank">Makaleyi Görüntüle</a>
         </div>
@@ -164,7 +168,7 @@
           <a href="https://pubmed.ncbi.nlm.nih.gov/22134272/" class="kaynak-link" target="_blank">Makaleyi Görüntüle</a>
         </div>
         <div class="kaynak-item">
-          <strong>Buford 2007:</strong> Bu çalışma, özellikle <span class="vurgu">vejetaryen ve vegan sporcuların</span> kreatin depolarının daha düşük olabileceğini ve bu nedenle takviyeye daha iyi yanıt verebileceğini belirtir. Bu grup için daha yüksek bir idame dozu (örneğin 0.075 g/kg) faydalı olabilir.
+          <strong>Buford 2007:</strong> Bu çalışma, özellikle <span class="vurgu">vejetaryen ve vegan sporcuların</span> kreatin depolarının daha düşük olabileceğini ve bu nedenle takviyeye daha iyi yanıt verebileceğini belirtir. Bu grup için önerilen dozaj, genel sporculardan daha yüksek olabilir ve <span class="vurgu">0.075 g/kg</span> gibi bir yükleme fazı (ilk 5-7 gün) fayda sağlayabilir.
           <a href="https://pubmed.ncbi.nlm.nih.gov/17908291/" class="kaynak-link" target="_blank">Makaleyi Görüntüle</a>
         </div>
         <div class="kaynak-item">
