--- a/sections/kreatin.html
+++ b/sections/kreatin.html
@@ -15,15 +15,20 @@
 
       <h5 class="info-header">Sıkça Sorulan Sorular:</h5>
       <div class="not-metin">
-        <strong>Hangi kreatin formu en etkilidir?</strong><br>
-        Kreatin monohidrat, 30 yılı aşkın araştırmalarla kanıtlanmış en etkili ve güvenli formdur. Piyasadaki diğer formlar (etil ester, HCl, buffered vb.) monohidrat kadar etkili değildir ve genellikle daha pahalıdır. Saf kreatin monohidrat tercih edilmelidir.
-        
-        <br><br><strong>Böbrek ve karaciğeri yorar mı?</strong><br>
-        Sağlıklı bireylerde, önerilen dozda (günlük 3-5 gram) kullanıldığında kreatinin böbrek veya karaciğere zarar verdiği bilimsel olarak kanıtlanmamıştır. Mevcut böbrek hastalığı olanlar mutlaka doktora danışmalıdır.
-        <br><br>
-        <strong>Saç döker mi?</strong><br>
-        Hayır, kreatin kullanımıyla saç dökülmesi arasında doğrudan bir bilimsel ilişki bulunmamaktadır. Bu, yaygın bir efsanedir.
-      </div>
+  <strong>Hangi kreatin formu en etkilidir?</strong><br>
+  Kreatin monohidrat, 30 yılı aşkın araştırmalarla kanıtlanmış en etkili ve güvenli formdur. Piyasadaki diğer formlar (etil ester, HCl, buffered vb.) monohidrat kadar etkili değildir ve genellikle daha pahalıdır. Saf kreatin monohidrat tercih edilmelidir.
+  
+  <br><br><strong>Böbrek ve karaciğeri yorar mı?</strong><br>
+  Sağlıklı bireylerde, önerilen dozda (günlük 3-5 gram) kullanıldığında kreatinin böbrek veya karaciğere zarar verdiği bilimsel olarak kanıtlanmamıştır. Mevcut böbrek hastalığı olanlar mutlaka doktora danışmalıdır.
+  <br><br>
+  <strong>Saç döker mi?</strong><br>
+  Hayır, kreatin kullanımıyla saç dökülmesi arasında doğrudan bir bilimsel ilişki bulunmamaktadır. Bu, yaygın bir efsanedir.
+
+  <br><br>
+  <strong>Kreatin kullanırken daha fazla su içmeli miyim?</strong><br>
+  Kreatin dehidrasyona neden olmaz ve ekstra su tüketimi zorunlu değildir. Ancak, kaslarda su tutulumunu artırdığı için hidrasyonu desteklemek adına su alımını artırmak her zaman faydalıdır.
+</div>
+
       
       <div class="doz-bilgisi">
         <h6>Doz Aşımı (Hafifçe Yüksek Alım):</h6>
